tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_49.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := ((- ((2 * 1223) MOD (200 - z))) <= (((z * 1223) * (200 - 1)) MOD ((2 * 1223) + (z MOD 2))));
  (* error *)  z := ((- ((q DIV 200) * (200 + x))) MOD (((y + 200) - (z MOD x)) + (+ (1223 MOD y))));
               p := ((((- y) + (1 + z)) > ((200 - x) MOD (1223 MOD y))) & (((x >= 200) & (p & p)) OR ((2 + y) > (0 + 1))));
               q := ((+ ((z + z) - (+ 0))) = (((+ 0) * (1 - 2)) MOD (+ (x + 1))));
               x := ((((+ x) - (200 - z)) DIV ((2 MOD 2) - (z DIV 1))) + (((+ 2) + (2 MOD 1)) DIV ((2 * y) * (200 MOD 0))));
               x := ((((0 - 200) - (- 2)) - ((1223 * 2) MOD (200 - 200))) DIV (+ ((z * z) DIV (+ z))));
               p := (((+ (- 0)) <= ((y MOD 0) + (1223 MOD 0))) & (((1 * y) DIV (1 + 2)) < ((- y) * (y DIV 2))));
               y := ((+ ((1223 - 1223) * (z DIV 200))) * (- ((y * z) + (1 - 1223))));
               y := (+ (- ((200 * y) + (z + 0))));
               r := ((((+ 2) MOD (1 DIV 0)) * ((x + x) MOD (- z))) # (((- y) + (z - y)) - (- (y + 1223))))
END Test12.